argocd/md-converter/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: md-converter
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
      - name: web
        image: ghcr.io/alex-j-butler/markdown-converter-api/web:1.0.3
        ports:
        - containerPort: 8000
