argocd/md-converter/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: md-converter
  labels:
    app: frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: frontend
