argocd/md-converter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: md-converter
  labels:
    app: web
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: web
